--- a/template/package.json
+++ b/template/package.json
@@ -37,6 +37,7 @@
     "@typescript-eslint/parser": "4.2.0",
     "babel-plugin-inline-react-svg": "1.1.1",
     "babel-plugin-jsx-remove-data-test-id": "2.1.3",
+    "chalk": "4.1.0",
     "eslint": "7.9.0",
     "eslint-config-airbnb": "18.2.0",
     "eslint-config-airbnb-typescript": "10.0.0",
