--- a/template/package.json
+++ b/template/package.json
@@ -8,6 +8,7 @@
     "node": "12"
   },
   "scripts": {
+    "build": "NODE_ENV=production next build",
     "dev": "next -p ${PORT:-3000}",
     "lint": "eslint . --ext ts,tsx,js,jsx --config eslint.config.js",
     "lint-package-json": "node scripts/lint-package-json.js",
