Login/logout flow

--- a/template/.env.example
+++ b/template/.env.example
@@ -6,3 +6,10 @@
 # URL for REST API.
 #
 API_URL=http://localhost:3001
+
+# (optional for development, unused in production)
+# Those will be used as credentials in login form.
+# Use only in development.
+#
+# DEFAULT_USER_EMAIL=user@example.com
+# DEFAULT_USER_PASSWORD=P@ssw0rd!
