--- a/package.json
+++ b/package.json
@@ -18,5 +18,13 @@
     "copy-dir": "1.3.0",
     "jest": "26.4.2",
     "recast": "0.20.3"
+  },
+  "devDependencies": {
+    "husky": "4.3.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "(cd template && yarn lint-package-json && yarn lint --fix)"
+    }
   }
 }
