--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,17 +1,10 @@
 name: CI
-
 on:
   push:
     branches: [master]
   pull_request:
     branches:
       - '**'
-    paths-ignore:
-      - '**/.nvmrc'
-      - '**/.dockerignore'
-      - '**/.gitignore'
-      - '**/*.md'
-
 jobs:
   create-project:
     runs-on: ubuntu-latest
@@ -35,7 +28,8 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-      - name: Restore node_modules cache for repo
+
+      - name: Restore node_modules cache for repository
         uses: actions/cache@v1
         with:
           path: ./node_modules
@@ -46,14 +40,10 @@ jobs:
       - name: Restore node_modules cache for src project
         uses: actions/cache@v1
         with:
-          path: ./src/node_modules
-          key: ${{ runner.os }}-src-node-modules-${{ hashFiles('src/yarn.lock') }}
+          path: ./template/node_modules
+          key: ${{ runner.os }}-template-node-modules-${{ hashFiles('template/yarn.lock') }}
           restore-keys: |
-            ${{ runner.os }}-src-node-modules-
+            ${{ runner.os }}-template-node-modules-
 
       - run: yarn --pure-lockfile
       - run: yarn create-project
-
-      # Smoke test if script is not failing.
-      # It doesn't matter if we run it in template or out dir.
-      - run: (cd out && node scripts/rewrite-package-json.js)
