--- a/template/.dockerignore
+++ b/template/.dockerignore
@@ -1,13 +1,16 @@
+# Applicable when building docker image locally.
+node_modules
+.next
+out
+
 .env.example
 .gitignore
 .nvmrc
+Dockerfile
 eslint.config.js
+jest.*
+lint-staged.*
 next-env.d.ts
 *.md
+prettier.*
 tsconfig.eslint.json
-
-# Only for local development
-.next
-node_modules
-
-!.env
