Ignore optional deps

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,5 +45,5 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-template-node-modules-
 
-      - run: yarn --pure-lockfile
+      - run: yarn --pure-lockfile --ignore-optional
       - run: yarn create-project
