--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "node": "12"
   },
   "scripts": {
-    "create-project": "rm -rf out && sh -e ./create.sh",
+    "create-project": "sh -e ./create.sh",
     "test": "jest"
   },
   "dependencies": {
@@ -18,13 +18,5 @@
     "copy-dir": "1.3.0",
     "jest": "26.4.2",
     "recast": "0.20.3"
-  },
-  "devDependencies": {
-    "husky": "4.3.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "(cd template && yarn lint-package-json && yarn lint --fix)"
-    }
   }
 }
