--- a/template/package.json
+++ b/template/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "NODE_ENV=production next build",
     "dev": "next -p ${PORT:-3000}",
-    "lint": "eslint . --ext ts,tsx,js,jsx --config eslint.config.js",
+    "eslint": "eslint --ext ts,tsx,js,jsx --config eslint.config.js",
+    "lint": "yarn eslint .",
     "lint-package-json": "node scripts/lint-package-json.js",
     "start": "NODE_ENV=production next start -p ${PORT:-3000}",
     "test": "jest",
@@ -20,44 +21,47 @@
     "axios": "0.20.0",
     "email-validator": "2.0.4",
     "envalid": "6.0.2",
-    "formik": "2.1.5",
+    "formik": "2.2.0",
     "msw": "0.21.2",
-    "next": "9.5.3",
+    "next": "9.5.5",
     "nookies": "2.4.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
     "typescript": "4.0.3"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "9.5.5",
     "@testing-library/jest-dom": "5.11.4",
-    "@testing-library/react": "11.0.4",
+    "@testing-library/react": "11.1.0",
     "@types/jest": "26.0.14",
-    "@types/node": "14.11.2",
-    "@types/react": "16.9.49",
+    "@types/node": "14.11.8",
+    "@types/react": "16.9.52",
     "@types/react-dom": "16.9.8",
     "@types/uuid": "8.3.0",
-    "@typescript-eslint/eslint-plugin": "4.2.0",
-    "@typescript-eslint/parser": "4.2.0",
+    "@typescript-eslint/eslint-plugin": "4.4.1",
+    "@typescript-eslint/parser": "4.4.1",
     "babel-plugin-inline-react-svg": "1.1.1",
     "babel-plugin-jsx-remove-data-test-id": "2.1.3",
     "chalk": "4.1.0",
-    "eslint": "7.9.0",
+    "eslint": "7.11.0",
     "eslint-config-airbnb": "18.2.0",
-    "eslint-config-airbnb-typescript": "10.0.0",
-    "eslint-config-prettier": "6.12.0",
+    "eslint-config-airbnb-typescript": "11.0.0",
+    "eslint-config-prettier": "6.13.0",
     "eslint-import-resolver-alias": "1.1.2",
-    "eslint-plugin-import": "2.22.0",
-    "eslint-plugin-jest": "24.0.2",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jest": "24.1.0",
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-prettier": "3.1.4",
-    "eslint-plugin-react": "7.21.2",
+    "eslint-plugin-react": "7.21.4",
     "eslint-plugin-react-hooks": "4.1.2",
     "husky": "4.3.0",
-    "jest": "26.4.2",
-    "lint-staged": "10.4.0",
+    "jest": "26.5.3",
+    "lint-staged": "10.4.1",
     "prettier": "2.1.2"
   },
-  "lint-staged": {
-    "*.{ts,tsx,js,jsx}": "yarn lint-package-json && yarn lint --fix"
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
