--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "create-frontend-app",
+  "name": "create-react-project",
   "version": "0.0.1",
-  "main": "index.js",
-  "repository": "git@github.com:jedrzejginter/create-frontend-app.git",
+  "repository": "git@github.com:jedrzejginter/create-react-project.git",
   "author": "Jedrzej Ginter <dzeejj@gmail.com> (https://github.com/jedrzejginter)",
   "license": "MIT",
   "engines": {
     "node": "12"
   },
+  "main": "build/core.js",
+  "bin": {
+    "create-react-project": "node build/cli.js"
+  },
   "scripts": {
-    "create-project": "sh -e ./create.sh",
-    "test": "jest"
+    "create-project": "node build/cli.js",
+    "test": "NODE_ENV=test jest"
   },
   "dependencies": {
-    "@babel/parser": "7.11.5",
-    "@babel/types": "7.11.5",
-    "copy-dir": "1.3.0",
-    "jest": "26.4.2",
-    "recast": "0.20.3"
+    "cpy": "8.1.1",
+    "jest": "26.5.3",
+    "rimraf": "3.0.2",
+    "shell-quote": "1.7.2",
+    "yargs": "16.1.0"
   }
 }
