--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "scripts": {
     "create-project": "node build/cli.js",
+    "eslint": "eslint --ext js --config eslint.config.js",
+    "lint": "yarn eslint .",
     "test": "NODE_ENV=test jest"
   },
   "dependencies": {
@@ -21,5 +23,21 @@
     "rimraf": "3.0.2",
     "shell-quote": "1.7.2",
     "yargs": "16.1.0"
+  },
+  "devDependencies": {
+    "eslint": "7.11.0",
+    "eslint-config-airbnb": "18.2.0",
+    "eslint-config-prettier": "6.13.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jest": "24.1.0",
+    "eslint-plugin-prettier": "3.1.4",
+    "husky": "4.3.0",
+    "lint-staged": "10.4.1",
+    "prettier": "2.1.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && (cd template && lint-staged)"
+    }
   }
 }
