--- a/template/package.json
+++ b/template/package.json
@@ -59,7 +59,7 @@
     "lint-staged": "10.4.1",
     "prettier": "2.1.2"
   },
-  "husky": {
+  "__husky": {
     "hooks": {
       "pre-commit": "lint-staged"
     }
