--- a/package.json
+++ b/package.json
@@ -13,27 +13,33 @@
   },
   "scripts": {
     "create-project": "node build/cli.js",
+    "dev": "SKIP_SCRIPTS=true yarn create-project -o out -n myproject -f && CRP_ARG_OUT=out CRP_ARG_NAME=myproject t --watch",
     "eslint": "eslint --ext js --config eslint.config.js",
     "lint": "yarn eslint .",
     "test": "NODE_ENV=test jest"
   },
   "dependencies": {
     "cpy": "8.1.1",
-    "jest": "26.5.3",
     "rimraf": "3.0.2",
     "shell-quote": "1.7.2",
     "yargs": "16.1.0"
   },
   "devDependencies": {
+    "@types/jest": "26.0.14",
     "eslint": "7.11.0",
     "eslint-config-airbnb": "18.2.0",
     "eslint-config-prettier": "6.13.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jest": "24.1.0",
     "eslint-plugin-prettier": "3.1.4",
+    "glob": "7.1.6",
     "husky": "4.3.0",
+    "jest": "26.5.3",
     "lint-staged": "10.4.1",
     "prettier": "2.1.2"
+  },
+  "peerDependencies": {
+    "jest": ">=26"
   },
   "husky": {
     "hooks": {
