--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -20,7 +20,7 @@ jobs:
       - run: date > source/generated.txt
       - run: |
           cd target
-          git add /source/generated.txt
+          git add $GITHUB_WORKSPACE/source/generated.txt
           git commit -m 'test commit'
           git remote add source git@github.com:jedrzejginter/crp-test.git
           git push source main
