--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -25,6 +25,6 @@ jobs:
           git config user.email github-actions@github.com
           git add generated.txt
           git commit -m 'test commit'
-          git remote add source git@github.com:jedrzejginter/crp-test-v2.git
-          git push -f source main
+          # git remote add source git@github.com:jedrzejginter/crp-test-v2.git
+          git push
 
