--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Checkout target repo
-        if: github.ref == 'refs/heads/fix/ignore-git-dir-in-out-project'
+        if: github.ref == 'refs/heads/main'
         uses: actions/checkout@v2
         with:
           repository: jedrzejginter/create-react-project-app-01
