--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,6 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Checkout target repo
-        if: github.ref == 'refs/heads/main'
         uses: actions/checkout@v2
         with:
           repository: jedrzejginter/create-react-project-app-01
@@ -57,6 +56,7 @@ jobs:
       - run: yarn --pure-lockfile --ignore-optional
       - run: yarn create-project -f --out target --name create-react-project-app-01
 
+      # Sync only for "main" branch.
       - name: Sync created project with external repo
         if: github.ref == 'refs/heads/main'
         run: |
