Change name in template package.json

--- a/template/package.json
+++ b/template/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-react-project",
+  "name": "create-react-project-template",
   "version": "0.0.0",
   "repository": "git@github.com:jedrzejginter/create-react-project.git",
   "author": "Jedrzej Ginter <dzeejj@gmail.com> (https://github.com/jedrzejginter)",
