Fix missing env in ci workflow

--- a/template/.github/workflows/ci.yml
+++ b/template/.github/workflows/ci.yml
@@ -41,4 +41,5 @@ jobs:
       - run: yarn lint
       - run: yarn typecheck
       - run: yarn test
+      - run: cp .env.example .env
       - run: yarn build
