--- a/template/.github/workflows/ci.yml
+++ b/template/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
     branches:
       - '**'
 jobs:
-  create-project:
+  check-project:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
