Remove code that assumes how people want to use project

--- a/template/.env.example
+++ b/template/.env.example
@@ -1,6 +1,6 @@
 # How to set up environment variables?
 # Option 1: Create .env file in current directory, just like this one.
-# Option 2: Pass variables directly to build process: API_URL=.. PUBLIC_URL=.. yarn dev
+# Option 2: Pass variables directly to build process: ANALYZE=.. API_URL=.. yarn dev
 
 # (optional for build step running locally, do not use in production)
 # Analyze webpack bundle size with @next/bundle-analyzer.
