--- a/template/package.json
+++ b/template/package.json
@@ -22,6 +22,7 @@
     "email-validator": "2.0.4",
     "envalid": "6.0.2",
     "formik": "2.2.0",
+    "hoist-non-react-statics": "3.3.2",
     "msw": "0.21.3",
     "next": "9.5.5",
     "nookies": "2.4.0",
@@ -33,6 +34,7 @@
     "@next/bundle-analyzer": "9.5.5",
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "11.1.0",
+    "@types/hoist-non-react-statics": "3.3.1",
     "@types/jest": "26.0.14",
     "@types/node": "14.11.10",
     "@types/react": "16.9.53",
