--- a/template/package.json
+++ b/template/package.json
@@ -18,44 +18,46 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "axios": "0.20.0",
+    "axios": "0.21.0",
     "email-validator": "2.0.4",
     "envalid": "6.0.2",
-    "formik": "2.2.0",
+    "formik": "2.2.1",
+    "hoist-non-react-statics": "3.3.2",
     "msw": "0.21.3",
     "next": "9.5.5",
-    "nookies": "2.4.0",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
+    "nookies": "2.4.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "typescript": "4.0.3"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "9.5.5",
-    "@testing-library/jest-dom": "5.11.4",
+    "@testing-library/jest-dom": "5.11.5",
     "@testing-library/react": "11.1.0",
-    "@types/jest": "26.0.14",
-    "@types/node": "14.11.10",
+    "@types/hoist-non-react-statics": "3.3.1",
+    "@types/jest": "26.0.15",
+    "@types/node": "14.14.2",
     "@types/react": "16.9.53",
     "@types/react-dom": "16.9.8",
     "@types/uuid": "8.3.0",
-    "@typescript-eslint/eslint-plugin": "4.4.1",
-    "@typescript-eslint/parser": "4.4.1",
+    "@typescript-eslint/eslint-plugin": "4.5.0",
+    "@typescript-eslint/parser": "4.5.0",
     "babel-plugin-inline-react-svg": "1.1.1",
     "babel-plugin-jsx-remove-data-test-id": "2.1.3",
     "chalk": "4.1.0",
-    "eslint": "7.11.0",
+    "eslint": "7.12.0",
     "eslint-config-airbnb": "18.2.0",
     "eslint-config-airbnb-typescript": "12.0.0",
-    "eslint-config-prettier": "6.13.0",
+    "eslint-config-prettier": "6.14.0",
     "eslint-import-resolver-alias": "1.1.2",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jest": "24.1.0",
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-prettier": "3.1.4",
-    "eslint-plugin-react": "7.21.4",
-    "eslint-plugin-react-hooks": "4.1.2",
+    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-react-hooks": "4.2.0",
     "husky": "4.3.0",
-    "jest": "26.5.3",
+    "jest": "26.6.1",
     "lint-staged": "10.4.2",
     "prettier": "2.1.2"
   },
