--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: jedrzejginter/create-react-project-app-01
-          path: target
+          path: create-react-project-app-01
           ref: main
           token: ${{ secrets.PAT }}
 
@@ -46,19 +46,22 @@ jobs:
             ${{ runner.os }}-root-node-modules-
 
       - run: yarn --pure-lockfile --ignore-optional
-      - run: node build/cli.js --out target --name create-react-project-app-01 --force
+      - run: node build/cli.js --out new-project --name create-react-project-app-01 --force
 
       # Run check in output project
-      - run: (cd target && yarn typecheck)
-      - run: (cd target && yarn test --ci)
+      - run: (cd new-project && yarn typecheck)
+      - run: (cd new-project && yarn test --ci)
 
-      - run: PROJECT_OUT=target PROJECT_NAME=create-react-project-app-01 yarn test --ci
+      - run: PROJECT_OUT=new-project PROJECT_NAME=create-react-project-app-01 yarn test --ci
 
       # Sync only for "main" branch.
       - name: Sync created project with external repo
-        if: github.ref == 'refs/heads/main'
+        # if: github.ref == 'refs/heads/main'
         run: |
-          cd target
+          cp -R create-react-project-app-01/.git new-project/.git
+          rm -rf create-react-project-app-01
+          mv new-project create-react-project-app-01
+          cd create-react-project-app-01
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
