--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,5 +65,5 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
-          git commit -m "${{ github.event.head_commit.message }}""
+          git commit -m "${{ github.event.head_commit.message }}"
           git push -f
