--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,13 +48,26 @@ jobs:
       - run: yarn --pure-lockfile --ignore-optional
       - run: (cd with-tailwind && yarn)
       - run: yarn lint
-      - run: node build/cli.js --out new-project --name create-react-project-app-01 --force
 
-      # Run check in output project
-      - run: (cd new-project && yarn typecheck)
-      - run: (cd new-project && yarn test --ci)
+      - uses: .github/actions/build-and-test-project.yml
+        with:
+          out: new-project
+          name: create-react-project-app-01
+          cli-flags: '--force'
 
-      - run: PROJECT_OUT=new-project PROJECT_NAME=create-react-project-app-01 yarn test --ci
+      - uses: .github/actions/build-and-test-project.yml
+        with:
+          out: create-react-project-with-tailwind
+          name: create-react-project-with-tailwind
+          cli-flags: '--withTailwind'
+
+      # - run: node build/cli.js --out new-project --name create-react-project-app-01 --force
+
+      # # Run check in output project
+      # - run: (cd new-project && yarn typecheck)
+      # - run: (cd new-project && yarn test --ci)
+
+      # - run: PROJECT_OUT=new-project PROJECT_NAME=create-react-project-app-01 yarn test --ci
 
       - name: Create commit with changes to generated project
         run: |
