Commit on changes only

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,6 +64,7 @@ jobs:
           cli-flags: '--withTailwind'
 
       - name: Create commit with changes to generated project
+        id: git-commit
         run: |
           cp -R create-react-project-app-01/.git new-project/.git
           rm -rf create-react-project-app-01
@@ -72,11 +73,16 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
-          git commit -m "[gh-actions] Push new version of the project"
+          git diff --quiet && git diff --staged --quiet || \
+            git commit -m "[gh-actions] Push new version of the project" && \
+            echo "::set-output name=should-push::true"
+
+      - if: steps.git-commit.outputs.should-push != 'true'
+        run: echo ${{ steps.git-commit.outputs.should-push }}
 
       # Sync only for "main" branch.
       - name: Sync created project with external repo
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/main' && steps.git-commit.outputs.should-push == 'true'
         run: |
           cd create-react-project-app-01
           git push -f
