--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,13 +12,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Checkout target repo
+      - name: Checkout deploy branch
         uses: actions/checkout@v2
         with:
-          repository: jedrzejginter/create-react-project-app-01
-          path: create-react-project-app-01
-          ref: main
-          token: ${{ secrets.PAT }}
+          ref: 'main/project'
+          path: project-branch
 
       - name: Setup Node
         uses: actions/setup-node@v1
@@ -52,24 +50,28 @@ jobs:
       - name: Create basic project
         uses: ./.github/actions/build-and-test-project
         with:
-          out: new-project
-          name: create-react-project-app-01
-          cli-flags: '--force'
+          cli-input: 'init -o out -n create-react-project-app'
+          test-task: basic
 
-      - name: Create project with Tailwind
+      - name: Add Tailwind
         uses: ./.github/actions/build-and-test-project
         with:
-          out: create-react-project-with-tailwind
-          name: create-react-project-with-tailwind
-          cli-flags: '--withTailwind'
+          cli-input: 'with-tailwind -d out'
+          test-task: with-tailwind
+
+      - name: Add Heroku deployment
+        uses: ./.github/actions/build-and-test-project
+        with:
+          cli-input: 'with-heroku-deploy -d out --app my-heroku-app --deployBranch main/project'
+          test-task: with-heroku-deploy
 
       - name: Create commit with changes to generated project
         id: git-commit
         run: |
-          cp -R create-react-project-app-01/.git new-project/.git
-          rm -rf create-react-project-app-01
-          mv new-project create-react-project-app-01
-          cd create-react-project-app-01
+          cp -R project-branch/.git out/.git
+          rm -rf project-branch
+          mv out project-branch
+          cd project-branch
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
@@ -80,5 +82,5 @@ jobs:
       - name: Sync created project with external repo
         if: github.ref == 'refs/heads/main'
         run: |
-          cd create-react-project-app-01
+          cd project-branch
           git push -f
