--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/parser": "7.12.3",
     "@babel/types": "7.12.1",
     "cpy": "8.1.1",
+    "js-yaml": "3.14.0",
     "recast": "0.20.4",
     "shell-quote": "1.7.2",
     "yargs": "16.1.0"
