--- a/.github/actions/build-and-test-project/action.yml
+++ b/.github/actions/build-and-test-project/action.yml
@@ -7,7 +7,7 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - run: node build/cli.js ${{ inputs.cli-flags }}
+    - run: node build/cli.js ${{ inputs.cli-input }}
       shell: bash
     - run: ./test.sh ${{ input.test-task }}
       shell: bash
