--- a/.github/actions/build-and-test-project/action.yml
+++ b/.github/actions/build-and-test-project/action.yml
@@ -9,7 +9,7 @@ runs:
   steps:
     - run: node build/cli.js ${{ inputs.cli-input }}
       shell: bash
-    - run: ./test.sh ${{ inputs.test-task }}
+    - run: ./test ${{ inputs.test-task }}
       shell: bash
     - run: (cd out && yarn typecheck)
       shell: bash
